Integrate quiz module and dashboard UI